# alacritty-theme-switcher

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/: release-drafter.yml  renovate.json5
.github/workflows/: ci.yml  version-maintenance.yml
src/: main.rs
