[package]
name = "alacritty-theme-switcher"
version = "0.1.5"
edition = "2021"
authors = ["Max Hösel <max@spacebird.dev>"]
description = "Easily switch between color themes for Alacritty"
repository = "https://github.com/spacebird-dev/alacritty-theme-switcher"
rust-version = "1.80"
license-file = "LICENSE"
readme = "README.md"
exclude = [".github", "dist", "media", "Makefile", ".pre-commit-config.yaml"]

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "unicode"] }
itertools = "0.14.0"
semver = "1.0.23"
toml = "0.9.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
